# AncientMap

./: .env.example  .gitattributes  .gitignore  API.md  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.lyra  LICENSE  MAINTAINERS.md  PRIVACY.md  README.md  SECURITY.md  Ubuntu_VPS_Security_Hardening_Guide.md  ancientnerds-nginx-config  channels.json  config.json  connectors overview.txt  connectors.md  data_sources_research.md  docker-compose.yml  fix_vps.sh  historical_empires_research.md  package-lock.json  package.json  pyproject.toml  requirements-api.txt  requirements.lyra.txt  requirements.txt  set_ollama_affinity.ps1  start_ollama.bat  test-tiles.js  upload_server.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data_source_request.md  feature_request.md
.github/workflows/: ci.yml
ancient-nerds-map/: .env.production  discoveries.html  index.html  lyra-discoveries.html  news.html  package-lock.json  package.json  radar.html  vite.config.ts
ancient-nerds-map/public/: manifest.json  robots.txt  sitemap.xml
ancient-nerds-map/scripts/: downloadFlags.cjs  generate_great_circle_geojson.cjs
ancient-nerds-map/src/: App.tsx  config.ts  discoveriesMain.tsx  newsMain.tsx  radarMain.tsx
api/: __init__.py  cache.py  main.py
api/config/: ai_modes.py
api/routes/: ai.py  content.py  contributions.py  discoveries.py  news.py  og.py  radar.py  sitemap.py  sites.py  sources.py  streetview.py
api/services/: __init__.py  access_control.py  admin_auth.py  llm_service.py  query_classifier.py  query_parser.py  rag_service.py  turnstile.py  vector_store.py  web_search.py
articles/: PUBLISHING-GUIDE.md  medium-release-article.md
data/: contributions.json
docs/: lyra-pipeline.md
logo/: Ancient Nerds_rev.ai  original logo.ai
pipeline/: __init__.py  api_config.py  backup.py  config.py  content_linker.py  database.py  enrich_site_names.py  main.py  static_exporter.py  transform_maps_with_gcps.py  unified_loader.py
pipeline/connectors/: __init__.py  base.py  cache.py  registry.py  types.py
pipeline/data/: wikidata_labels.json
pipeline/deduplication/: __init__.py
pipeline/historical_boundaries/: __init__.py  process_cliopatria.py
pipeline/ingesters/: __init__.py  ancient_nerds_original.py  arachne.py  base.py  boundaries_seshat.py  coins_nomisma.py  dare.py  david_rumsey.py  dinaa.py  eamena.py  earth_impacts.py  europeana.py  geonames.py  historic_england.py  inscriptions_edh.py  ireland_nms.py  megalithic_portal.py  met_museum.py  models_sketchfab.py  ncei_earthquakes.py  ncei_tsunami_observations.py  ncei_tsunamis.py  ncei_volcanoes.py  open_context.py  osm_historic.py  pleiades.py  rock_art.py  sacred_sites.py  shipwrecks_oxrep.py  topostext.py  unesco.py  volcanic_holvol.py  wikidata.py
pipeline/lyra/: __init__.py  article_generator.py  backfill_significance.py  channels.py  config.py  orchestrator.py  screenshot_extractor.py  site_identifier.py  site_matcher.py  summarizer.py  transcript_cleaner.py  transcript_fetcher.py  tweet_deduplicator.py  tweet_generator.py  tweet_verifier.py
pipeline/normalizers/: __init__.py  dates.py  site_type.py
pipeline/parsers/: __init__.py
pipeline/sea_level_contours/: __init__.py  generate_all.py
pipeline/site_images/: __init__.py  batch_updater.py  megalithic_images.py  sketchfab_images.py  wikimedia_fallback.py
pipeline/sources/: __init__.py  configs.py
pipeline/utils/: __init__.py  country_lookup.py  geo.py  http.py  logging.py  text.py
public/data/: links.json  sources.json
research/: historical-image-apis-report.md
scripts/: ancientnerds-logs.logrotate  ancientnerds-logs.service  backup_contributions.sh  build_ai_index.py  build_static.py  download_all.py  fix_descriptions.py  follow_logs.sh  generate_labels.py  init_db.py  init_extensions.sql  lyra_status.py  quick_test.py  reimport_ancient_nerds.py  setup_database.bat  test_ingesters.py  verify_data_quality.py  vps_backup.sh  vps_backup_daily.sh  vps_restore.sh
server-config/: ancientnerds  sshd.local
tests/: __init__.py  conftest.py  test_security.py
tests/api/: __init__.py  test_ai.py  test_health.py  test_og.py  test_sites.py
tests/pipeline/: __init__.py  test_database.py
video-factory/: Root.tsx  assemble-teaser.bat  capture-teaser.ts  capture-warp-ffmpeg.ts  capture-warp-smooth.ts  capture-warp-v2.ts  capture-warp.ts  cli.ts  index.ts  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video-factory/capture/: browser.ts  recorder.ts
video-factory/compositions/: EpicDiscoveryTeaser.tsx  ProductTeaser.tsx  SiteShort.tsx  index.ts
video-factory/data/: api-client.ts  types.ts
video-factory/scripts/: epic-discovery-teaser.ts
(+2141 files in other folders)
