# SPDX-License-Identifier: MIT
# Ancient Nerds Map - Python Project Configuration

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ancient-nerds-map"
version = "1.0.0"
description = "Archaeological sites data pipeline and API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ancient Nerds Team", email = "ancientnerds@proton.me"}
]
keywords = ["archaeology", "gis", "data-pipeline", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/AncientNerds/AncientMap"
Documentation = "https://github.com/AncientNerds/AncientMap#readme"
Repository = "https://github.com/AncientNerds/AncientMap.git"
Issues = "https://github.com/AncientNerds/AncientMap/issues"

# =============================================================================
# Mypy Configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_untyped_defs = false  # Start permissive, tighten later
disallow_incomplete_defs = true
no_implicit_optional = true
warn_no_return = true
show_error_codes = true
show_column_numbers = true

# Ignore missing imports for third-party packages without stubs
ignore_missing_imports = true

# Per-module configuration
[[tool.mypy.overrides]]
module = [
    "api.*",
    "pipeline.*",
]
disallow_untyped_defs = false  # Allow gradual typing adoption

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "node_modules",
    "ancient-nerds-map",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Assert usage (OK in tests)
    "S104",   # Binding to all interfaces
    "B008",   # Function call in default argument (OK for FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow asserts in tests
"scripts/*" = ["S602", "S603", "S607"]  # Allow subprocess in scripts

[tool.ruff.lint.isort]
known-first-party = ["api", "pipeline"]

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["api", "pipeline"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 50  # Start with 50%, increase over time

# =============================================================================
# Black Configuration (if used alongside ruff)
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | node_modules
  | ancient-nerds-map
)/
'''
